--- a/MVC/basic-counter/package.json
+++ b/MVC/basic-counter/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "webpack serve --open"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "ts-loader": "^9.4.0",
     "typescript": "^4.8.3",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.0"
   }
 }
